# grrs

./: Cargo.toml  README.md  run.sh  test.txt
src/: lib.rs  main.rs
tests/: cli.rs
