[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["GiveMe-A-Name <a455300764b@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search line in file"
readme = "README.md"
keywords = ["cli", "search", "demo"]
repository = "https://github.com/GiveMe-A-Name/grrs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.16.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"